<resources>
    <string name="app_name">PandaPanaderia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="frg1">Fragmento 1</string>
    <string name="frg2">Fragmento 2</string>
    <string name="frg3">Fragmento 3</string>
    <string name="intro">Hello</string>


    //TextViews Fragmento Producto
    <string name="NPro">Nombre:</string>
    <string name="PPro">Precio:</string>
    <string name="CPro">Cantidad:</string>



    //Botones Fragmento Producto
    <string name="AgrePro">Agregar</string>
    <string name="VerPro">Ver</string>
    <string name="ActuPro">Actualizar</string>
    <string name="BorrPro">Borrar</string>
    <string name="BusPro">Buscar</string>



</resources>
